You can no longer add a word that is too short or long.

--- a/WordGame.css
+++ b/WordGame.css
@@ -1,5 +1,9 @@
 body{
     background: black;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 .row{
     display: flex;
@@ -27,13 +31,21 @@ button{
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16pt;
+    margin: 4px;
 }
 input{
     border: solid 1px white;
     background-color: black;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    margin: 8px;
-    width: 196px;
+    margin: 4px;
+    width: 120px;
     font-size: 16pt;
+}
+#textMessage{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16pt;
+    color: white;
+    margin: 4px;
+    height: 28px;
 }
